# Cuda_Engine_Image_Classifier_

./: README.txt  requirements.txt
Inference/data/mnist/: download_pgms.py  labels.txt  labels.xlsx  uff_model.uff
Inference/src/common/: argsParser.h
Inference/src/sampleUffMNIST/: CMakeLists.txt  sampleUffMNIST.cpp  sample_uff_mnist.sln  sample_uff_mnist.vcxproj
Inference/src/sampleUffMNIST/x64/Release/sample_uff_mnist.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample_uff_mnist.lastbuildstate
Inference/src/trtexec/: trtexec.sln  trtexec.vcxproj
models/: checkpoint  frozen_tf_model.pb  model_tf.chkp.index  save_tf_model.pbtxt  uff_model_tf.pbtxt  uff_model_tf.uff
